assets/sass/_extra.scss
/* ... */
.biz-image-list {
  .imageListing {
    display: flex!important;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;
  }
  figure {
    display: inline-block;
    margin: 0 0;
    padding: 10px;
    img {
      width: 8vw;
      height: auto;
      @media screen and (max-width: 768px) {
        width: 80px;
      }
    }
  }
}

.calendar-grid-wrapper {
  .tribe-events-calendar-month__multiday-event-bar {
    .tribe-events-calendar-month__multiday-event-bar-inner {
      .tribe-events-calendar-month__multiday-event-bar-title {
        text-overflow: inherit;
        white-space: normal;
      }
    } 
  }
  .tribe-common--breakpoint-medium.tribe-events .tribe-events-calendar-month__multiday-event-wrapper {
    height: auto!important;
  }

  .tribe-events .tribe-events-calendar-month__multiday-event-bar,
  .tribe-events-calendar-month__multiday-event {
    border-radius: 200px!important;
    // overflow: hidden;
  }
  
  .activity-schedule-link {
    padding: 5px 0 20px;
    a {
      display: block;
      max-width: 150px;
      width: 100%;
      text-align: center;
      margin: 8px auto;
      font-size: 10px !important;
      text-transform: uppercase;
      color: $red!important;
      border: 1px solid $red;
      border-radius: 300px;
      padding: 5px;
      transition: all ease .3s;
      &:hover, &:focus {
        background: #000!important;
        border-color: #000!important;
        color: #FFF!important;
      }
    }

    &.is--mobile {
      padding: 25px 0 5px;
      a {
        max-width: 80%;
        padding: 10px 5px;
        font-size: 13px!important;
      }
    }
  }
}

.activity-schedule-modal.calendar-activity-schedule {
  .modal-title.modal-title-page {
    display: none!important;
  }
  .modal-title-calendar {
    display: block!important;
    text-align: center;
  }
  .info-wrapper.active {
    display: flex!important;
  }
  .todaySnapshotInfo {
    border-bottom: none!important;
    padding-bottom: 0!important;
  }
  .activity-schedule-modal {
    padding: 0 0!important;
  }
}

body.page-template-page-bike-ranch.subpage #banner:has(.image-wrapper .mobile) {
  @media screen and (max-width: 768px) {
    height: auto!important;
  }
}

body.scrolled.logged-in.admin-bar,
body.scrolled {
  .mobileRedTag .stats {
    position: relative!important;
    top: 0;
  }
}
body.logged-in.admin-bar.scrolled .redtag {
	top: 112px !important;
}
body.logged-in.admin-bar #customModalContainer.open {
  padding-top: 60px;
}


.fancybox-container.fancybox-is-open {
  z-index: 9999999999999!important;
}
.new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
  font-family: "Font Awesome 6 Pro";
  content: "\f078";
  font-weight: 400;
  font-size: 11px;
  position: relative;
  top: -1px;
}
/* Adventure Dining */

body.page-id-292 #banner .static-banner .image-wrapper,
body.single-dining #hero--single figure {
  padding-bottom: 48vw;
  position: relative;
}
body.page-id-292 #banner .static-banner .image-wrapper img.desktop,
body.single-dining #hero--single figure img.desktop {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

@media screen and (max-width: 768px) {
  body.page-id-292 #banner .static-banner .image-wrapper,
  body.single-dining #hero--single figure {
    padding-bottom: 60vw;
  }
  
  body.page-id-292 #banner .static-banner .image-wrapper img.mobile-feat-image,
  body.single-dining #hero--single figure img.mobile-feat-image {
  display: block;
  position: absolute!important;
  top: 0;
  left: 0;
  width: 100%!important;
  height: 100%!important;
  object-fit: cover;
  object-position: center;
  }
  #hero--single .banner-bottom {
    bottom: -1px;
  }
  .site-header-mobile .mobileMenuToggle {
    top: 0!important;
  }
  .site-header-mobile .site-logo-mobile {
    top: 2px!important;
  }
}

.site-header .navbar .right .navlink-today.today:after,
.site-header .new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
  content: "";
  position: relative;
  top: -2px;
  right: -8px;
  display: inline-block;
  width: 5px;
  height: 9px;
  border-right: 1px solid #000;
  border-bottom: 1px solid #000;
  transform: rotate(45deg) scale(0.75);
}

body.home {
  .site-header .navbar .right .navlink-today.today:after,
  .site-header .new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
    border-right-color: #FFF;
    border-bottom-color: #FFF;
  }
  .site-header .navbar .right .navlink-today.today:hover:after,
  .site-header .navbar .right .navlink-today.today:focus:after,
  .site-header .navbar .right .navlink-today.today:focus-within:after,
  .site-header.mouseover .navbar .right .navlink-today.today:after,
  .site-header.mouseover .new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
    border-right-color: #000;
    border-bottom-color: #000;
  }
  &.scrolled {
    .site-header .navbar .right .navlink-today.today:after,
    .site-header .new-nav-v2.desktop-navigation li.v-menu-item.has-children a span:after {
      border-right-color: #000;
      border-bottom-color: #000;
    }
  }
}


/* Tribe Calendar */
.hours-of-operation-mobile {
  padding-bottom: 20px!important;
  p {
    margin: 10px 0!important;
  }
}
.calendar-grid-wrapper .tribe-common--breakpoint-medium.tribe-events .tribe-events-calendar-month__multiday-event-wrapper {
  height: auto !important;
  min-height: 10px;
}
// .tribe-events-view--shortcode {
//   .tribe-events-calendar-month__events:has(.tribe-events-calendar-month__multiday-event-wrapper) {
//     article.hentry {
//       margin-top: 18px!important;
//       position: relative;
//       z-index: 50;
//     }
//     .tribe-events-calendar-month__multiday-event-wrapper {
//       article.hentry {
//         margin-top: 12px!important;
//         z-index: 2;
//       }
//     }
//   }
// }

